# Mikup

./: .env.example  .gitignore  .mikup_context.md  AGENTS.md  Audio_Standards.md  CLAUDE.md  DEVELOPMENT_SPRINT_02.md  HOOK_SETUP.md  PROGRESS.md  README.md  UPGRADE.md  diagnostic.py  idea.md  mikup-frontend-designer.skill  requirements-cuda.txt  requirements-mac.txt  requirements-windows.txt  requirements.txt  versions.json
.gemini/: GEMINI.md  settings.json
.pi/: .cargo_lock_hash  SYSTEM.md
Status/: AUDIT_REPORT_2026_03_05.md  PROGRESS.md  RESOLVED_FIXES_2026_03_05.md  TODO_FIXES.md
best_practices/: AI_DIRECTOR.md  AUDIO_PROCESSING.md  FRONTEND.md  ML_INFRASTRUCTURE.md  PYTHON.md  RUST.md  TAURI.md
best_practices/archive/: FRONTEND_REACT.md.bak  tailwindcss.md.bak
best_practices/reference/: google_genai.md  python.md  pytorch.md  react.md  rust.md  tauri.md  vizia.md
data/: config.json  history.json
docs/: HOOK_SETUP.md  SPEC.md  UI_LAYOUT.md  jcodemunch-auto-index-new-files.md  jcodemunch-autorefresh.md
docs/archive/: 2026-02-27-checkpoint-resume.md  2026-02-27-director-pivot-design.md  2026-02-27-interactive-daw-migration.md  2026-02-27-phase4-dsp-visualization.md  2026-02-27-rust-dsp-migration-detailed.md  2026-02-27-transcriber-rewrite.md  2026-02-27-ui-redesign-design.md  2026-02-28-first-run-workspace-impl.md  2026-02-28-mikup-console-stems-design.md  2026-02-28-mikup-console-stems-impl.md  2026-02-28-transcript-scrubber.md  2026-03-01-hybrid-sep-impl.md  2026-03-02-project-first-workspace-design.md  2026-03-02-project-first-workspace.md  2026-03-02-storage-gauge-redo-ui.md  2026-03-02-torch-unpickling-security-fix.md  2026-03-02-type-safe-ipc-migration.md  2026-03-06-jcm-improvements.md
native/: Cargo.toml
native/src/: audio_engine.rs  landing_view.rs  lufs_graph_view.rs  lufs_meter.rs  main.rs  models.rs  project.rs  vectorscope_view.rs  waveform_view.rs  workspace_view.rs
native/src/dsp/: loudness.rs  mod.rs  player.rs  scanner.rs  spatial.rs  spectral.rs
native/test_fixtures/test_payload/: .mikup_cache  mikup_payload.json
scripts/: download_models.py  setup-wsl2-dev.sh  test_hybrid_sep.py
src/: bootstrap.py  main.py
src/dsp/: processor.py
tests/: _pipeline_test_utils.py  mock_generator.py  test_bootstrap.py  test_main_checkpoint.py  test_metrics_enrichment.py  test_redo_payload.py  test_torch_security.py  test_workspace.py
ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs
ui/src-tauri/src/dsp/: loudness.rs  mod.rs  player.rs  scanner.rs  spectral.rs
(+64 files in other folders)
