[package]
name = "mikup-native"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
vizia             = "0.3.0"
cpal              = "0.17.3"
rubato            = "1.0.1"
rtrb              = "0.3.2"
symphonia         = { version = "0.5.5", features = ["mp3", "flac", "wav"] }
atomic_float      = "1.1.0"
audioadapter-buffers = "2.0"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
chrono            = { version = "0.4", features = ["serde"] }
ebur128           = "0.1.10"
rustfft           = "6.4.1"
rfd               = "0.15"
